@@ -431,6 +431,9 @@ int main(int argc, char **argv)
     if(optget(opts, "LeaveTemporaryFiles")->enabled)
 	cl_engine_set_num(engine, CL_ENGINE_KEEPTMP, 1);
 
+    if(optget(opts, "ForceToDisk")->enabled)
+	cl_engine_set_num(engine, CL_ENGINE_FORCETODISK, 1);
+
     if(optget(opts, "PhishingSignatures")->enabled)
 	dboptions |= CL_DB_PHISHING;
     else
